# libni

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  test.sh
include/ni/: cache_locality.hh  config.hh.in  exception.hh  format.hh  futex.hh  likely.hh  optional.hh  preprocessor.hh  random.hh  scope_guard.hh  string_view.hh  tagged_ptr.hh
include/ni/cds/: lcrq.hh  ms_queue.hh  queue.hh  spsc_buffer_list.hh  spsc_linked_list.hh  spsc_ring_buffer.hh
include/ni/cds/distributed/: dynamic.hh  static.hh
include/ni/hash/: jump_consistent_hash.hh  multi_linear_hash.hh
include/ni/logging/: capture.hh  common.hh  log_message.hh  log_service.hh  log_worker.hh  logger.hh  logging.hh  message_bus.hh  sink.hh
include/ni/mpl/: unit.hh
include/ni/sync/: sleep.hh  spinlock.hh
src/: CMakeLists.txt  exception.cc
src/hash/: jump_consistent_hash.cc
src/logging/: capture.cc  common.cc  log_service.cc  log_worker.cc  logger.cc  logging.cc  message_bus.cc  sink.cc
test/: CMakeLists.txt  logging_test.cc  scope_guard_test.cc  tagged_ptr_test.cc  test.cc
test/cds/: CMakeLists.txt  lcrq_test.cc  ll_dynamic_distributed_queue_test.cc  ms_queue_test.cc  spsc_test.cc
test/hash/: CMakeLists.txt  multi_linear_hash_test.cc
